--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node": "8.9.3"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "lodash": "^4.17.4",
