--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mongodb": "2.2.5",
     "mongoose": "^4.13.7",
     "path": "^0.12.7",
-    "pug": "^2.0.0-rc.4"
+    "pug": "^2.0.0-rc.4",
+    "validator": "^9.4.1"
   },
   "devDependencies": {
     "expect": "^22.0.3",
