--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.2.0",
     "lodash": "^4.17.4",
     "mongodb": "2.2.5",
     "mongoose": "^4.13.7",
